# learn-substrate

./: Cargo.toml  README.md
artifacts/: metadata.scale
node/: Cargo.toml
node/src/rpc/: mod.rs  username.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/src/: apis.rs  lib.rs
runtime/src/configs/: mod.rs
signature/: Cargo.toml
signature/src/: main.rs
submit_account/: Cargo.toml
submit_account/src/: main.rs
